Fixed issue of short WYR qns not being aligned left

--- a/scss/default.scss
+++ b/scss/default.scss
@@ -132,9 +132,6 @@ ion-content {
       display: flex;
       align-items: center;
       -webkit-align-items: center;
-      justify-content: center;
-      -webkit-justify-content: center;
-      // text-align: center;
 
       &.selected {
         color: white;
